TreeBUGS 1.3.2 (April 2018)
===========

* Bugfix: extendMPT() for betaMPT
* New function to extract MCMC samples: getSamples(...)

TreeBUGS 1.3.1 (February 2018)
===========

* Improved BayesFactorSlope(): JZS prior (=Cauchy) or g-prior(=normal)
* Bugfixes due to uncorrelated traitMPT


TreeBUGS 1.3.0 (February 2018)
===========

* New option for the latent-trait MPT model: Independent Cauchy priors instead
  of a multivariate Wishart prior for the random-effects covariance matrix.


TreeBUGS 1.2.0 (January 2018)
===========

* new function BayesFactorSlope() to get Bayes factor for continuous predictors in traitMPT()
* G^2 in PPP()
* option to use mu instead of mean in genTraitMPT()
* Various bugfixes


TreeBUGS 1.1.1 (August 2017)
===========

* Various bug fixes


TreeBUGS 1.1.0 (April 2017)
===========

* Functions to compute Bayes factors for simple (nonhierarchical, fixed-effects) MPT models: BayesFactorMPT() and marginalMPT()
* Registration of C++ routines


TreeBUGS 1.0.3 (January 2017)
===========

* Bugfix in readEQN: treat numeric parameter labels as constants


TreeBUGS 1.0.3 (January 2017)
===========

* Bugfix for traitMPT in priorPredictive()
* Optional arguments (...) for plotting functions


TreeBUGS 1.0.0 (December 2016)
===========

* New function correlationPosterior() to estimate the posterior for the population correlation (taking into account the number of participants)
* Second CRAN release


TreeBUGS 0.8.2 (November 2016)
===========

* New function probitInverse() to get the bivariate transformation of mean and SD in probability space given a normal distribution in probit space
* Visible function summarizeMCMC() to provide TreeBUGS-specific MCMC summaries
* priorPredictive() allows to sample group-level parameters


TreeBUGS 0.8.1 (November 2016)
===========

* Zeros-trick by Smith & Batchelder (2010) for betaMPT() implemented (i.e., by using the argument alpha="zero")