@@ -63,6 +63,7 @@ importFrom(coda,gelman.diag)
 importFrom(coda,gelman.plot)
 importFrom(coda,mcmc)
 importFrom(coda,mcmc.list)
+importFrom(coda,nchain)
 importFrom(coda,niter)
 importFrom(coda,nvar)
 importFrom(coda,traceplot)
